<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_margin="16dp"
        app:civ_border_color="@color/github"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/TextPrimary.Big"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_photo"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

    <TextView
        android:id="@+id/tv_detail_username"
        style="@style/TextSize.Primary"
        android:gravity="center"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <include
        android:id="@+id/include_detail"
        layout="@layout/layout_detail_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:contentDescription="@string/desc_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_detail"
        app:tabTextColor="@color/github" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_icon"
        android:src="@drawable/ic_favorite_inactive"
        app:layout_constraintBottom_toBottomOf="@+id/include_detail"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>